--- a/test.html
+++ b/test.html
@@ -1,6 +1,8 @@
  <!DOCTYPE HTML>
 <html>
-  <head><title>Best Sport ever</title></head>
+  <head><title>Best Sport ever</title>
+<link rel="stylesheet" href="style.css">
+</head>
   <header id="header">
     <div class="logo">
       <img
