--- a/test.html
+++ b/test.html
@@ -5,6 +5,7 @@
 </head>
   <header id="header">
     <!-- upload changes in github-->
+    <!-- test of command git diff-->
     <div class="logo">
       <img
            src="https://i.postimg.cc/ZY6FfYz4/swimlogo.png"
@@ -16,6 +17,7 @@
         <li><a class="nav-link" href="#definition"><strong>Definition</strong></a></li>
         <li><a class="nav-link" href="#technique"><strong>Technique</strong></a></li>
         <li><a class="nav-link" href="#sport"><strong>Sport</strong></a></li>
+      
       </ul>
     </nav>
   </header>
@@ -36,6 +38,7 @@ Swimming is consistently among the top public recreational activities, and in so
       
         <section id="technique">
           <h2>Technique</h2>
+          <h2>sport</h2>
           <p><img src="https://i.postimg.cc/WbdWZgt9/strokes.jpg" height="150" width=auto align="right">
 Swimming can be undertaken using a wide range of styles, known as 'strokes,' and these strokes are used for different purposes, or to distinguish between classes in competitive swimming. It is not necessary to use a defined stroke for propulsion through the water, and untrained swimmers may use a 'doggy paddle' of arm and leg movements, similar to the way four-legged animals swim.
 
