test 2 github password

--- a/test.html
+++ b/test.html
@@ -39,6 +39,7 @@ Swimming is consistently among the top public recreational activities, and in so
         <section id="technique">
           <h2>Technique</h2>
           <h2>sport</h2>
+          <!-- prueba de password github -->
           <p><img src="https://i.postimg.cc/WbdWZgt9/strokes.jpg" height="150" width=auto align="right">
 Swimming can be undertaken using a wide range of styles, known as 'strokes,' and these strokes are used for different purposes, or to distinguish between classes in competitive swimming. It is not necessary to use a defined stroke for propulsion through the water, and untrained swimmers may use a 'doggy paddle' of arm and leg movements, similar to the way four-legged animals swim.
 
