--- a/test.html
+++ b/test.html
@@ -4,8 +4,7 @@
 <link rel="stylesheet" href="style.css">
 </head>
   <header id="header">
-    <!-- upload changes in github-->
-    <!-- test of command git diff-->
+    <!-- last change test github -->
     <div class="logo">
       <img
            src="https://i.postimg.cc/ZY6FfYz4/swimlogo.png"
